--- a/docker-container-deploy.yaml
+++ b/docker-container-deploy.yaml
@@ -5,7 +5,7 @@
   - name: Create & Start Container
     docker_container:
       name: myweb
-      image: "ldstoson/jenkin-ansible:{{ lookup('env','BUILD_NUMBER') }}"
+      image: "ldstoson/jenkins-ansible:{{ lookup('env','BUILD_NUMBER') }}"
       state: started
       ports:
       - "80:8080"
